--- a/phantom_algebra.opam
+++ b/phantom_algebra.opam
@@ -1,6 +1,7 @@
-name: "phantom-algebra"
+name: "phantom_algebra"
 version:"0.1"
 opam-version: "1.2"
+license: "MIT"
 maintainer: "Florian Angeletti <octa@polychoron.fr>"
 authors: "Florian Angeletti <octa@polychoron.fr>"
 dev-repo: "git+https://github.com/Octachron/phantom-algebra"
@@ -12,7 +13,7 @@ build:[
 ]
 
 build-doc:[
-  [ "jbuilder" "build" "-p" "phantom_algebra" "-j" jobs "@doc" ]
+  [ "jbuilder" "build" "-p" name "-j" jobs "@doc" ]
 ]
 
 
