--- a/phantom_algebra.opam
+++ b/phantom_algebra.opam
@@ -1,5 +1,5 @@
 name: "phantom_algebra"
-version:"0.1"
+version:"1.0"
 opam-version: "1.2"
 license: "MIT"
 maintainer: "Florian Angeletti <octa@polychoron.fr>"
@@ -16,7 +16,7 @@ build-doc:[
   [ "jbuilder" "build" "-p" name "-j" jobs "@doc" ]
 ]
 
-available: [ ocaml-version >= "4.02.3"
+available: [ ocaml-version >= "4.02.3"]
 
 depends: [
   "jbuilder" {build}
