--- a/phantom_algebra.opam
+++ b/phantom_algebra.opam
@@ -1,12 +1,11 @@
-name: "phantom_algebra"
-version:"1.0"
+name: "phantom-algebra"
 opam-version: "1.2"
 license: "MIT"
 maintainer: "Florian Angeletti <octa@polychoron.fr>"
 authors: "Florian Angeletti <octa@polychoron.fr>"
 dev-repo: "git+https://github.com/Octachron/phantom-algebra"
 homepage: "https://github.com/Octachron/phantom-algebra"
-bug-reports: "https://github.com/Octachron/pantom-algebra/issues"
+bug-reports: "https://github.com/Octachron/phantom-algebra/issues"
 
 build:[
  ["jbuilder" "build" "-p" name "-j" jobs]
