--- a/phantom-algebra.opam
+++ b/phantom-algebra.opam
@@ -3,7 +3,7 @@ opam-version: "1.2"
 license: "MIT"
 maintainer: "Florian Angeletti <octa@polychoron.fr>"
 authors: "Florian Angeletti <octa@polychoron.fr>"
-dev-repo: "git+https://github.com/Octachron/phantom_algebra"
+dev-repo: "https://github.com/Octachron/phantom_algebra.git"
 doc: "https://Octachron.github.io/phantom_algebra/docs"
 homepage: "https://github.com/Octachron/phantom_algebra"
 bug-reports: "https://github.com/Octachron/phantom_algebra/issues"
